# TF-PREDICTION-WEB

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
app/: __init__.py  benjamini_hotchberg.py  routes.py  tf_analysis.py  umap_pipeline.py  utils.py
prior_data/: causal_priors.tsv  human_gencode_mapping.csv  mouse_gencode_mapping.csv  mouse_to_human.tsv
static/css/src/: input.css
static/js/: common.js  create_analysis.js  index.js  main.js  view_analysis.js
templates/: base.html  create_analysis.html  index.html  login.html  signup.html  view_analysis.html
