[project]
name = "tf-pred-webserver"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "ruff>=0.11.8",
    "scanpy>=1.11.1",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "joblib>=1.3.0",
    "tqdm>=4.66.0",
    "werkzeug>=3.0.0",
    "psutil>=5.9.0",
    "filelock>=3.18.0",
]
